--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,22 @@ services:
     restart: always
     networks:
       - apptestjava
-  #nginx_ssl_java_app_movil:
-  #  container_name: nginx_ssl_java_app_movil
-  #  image: nginx
-  #  tty: true
-  #  ports:
-  #    - "9500:442"
-  #  volumes:
-  #    - ./nginx/config/nginx.conf:/etc/nginx/nginx.conf
-  #    - ./nginx/ssl:/ssl/
-  #    - ./nginx/html/:/var/www/html
-  #    - ./nginx/logs:/etc/nginx/logs
-  #  restart: always
-  #  depends_on:
-  #    - java_appmovil
-  #  networks:
-  #    - app_movil_back
+  nginx_ssl_java_apptest:
+    container_name: nginx_ssl_java_apptest
+    image: nginx
+    tty: true
+    ports:
+      - "9124:443"
+    volumes:
+      - ./nginx/config/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/ssl:/ssl/
+      - ./nginx/html/:/var/www/html
+      - ./nginx/logs:/etc/nginx/logs
+    restart: always
+    depends_on:
+      - java_apptest
+    networks:
+      - apptestjava
 networks:
   apptestjava:
     driver: bridge
