--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,14 @@ services:
       - apptestjava
   nginx_ssl_java_apptest:
     container_name: nginx_ssl_java_apptest
-    image: nginx
+    build:
+      context: .
+      target: nginx_conf
     tty: true
     ports:
       - "9124:443"
     volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/ssl:/ssl/
       - ./nginx/html/:/var/www/html
       - ./nginx/logs:/etc/nginx/logs
