--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,10 @@ services:
     tty: true
     ports:
       - "9124:443"
-    volumes:
-      - /home/app/nginx/ssl:/ssl/
-      - /home/app/nginx/html/:/var/www/html
-      - /home/app/nginx/logs:/etc/nginx/logs
+    #volumes:
+    #  - /home/app/nginx/ssl:/ssl/
+    #  - /home/app/nginx/html/:/var/www/html
+    #  - /home/app/nginx/logs:/etc/nginx/logs
     restart: always
     depends_on:
       - java_apptest
