--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,12 @@ services:
     tty: true
     ports:
       - "9124:443"
+    command: tail -f /dev/null
     volumes:
       - /home/app/nginx/ssl:/ssl/
       - /home/app/nginx/html:/var/www/html
       - /home/app/nginx/logs:/etc/nginx/logs
-    restart: always
+    restart: no
     depends_on:
       - java_apptest
     networks:
