--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     tty: true
     ports:
       - "9124:443"
-    command: ls /home/app/nginx
+    command: ls /root/jenkings/
     volumes:
       - /home/app/nginx/ssl:/ssl/
       - /home/app/nginx/html:/var/www/html
