--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,13 @@ services:
     tty: true
     ports:
       - "9124:443"
-    command: pwd
+    #command: tail -f /dev/null
     volumes:
-      - /home/app/nginx/ssl:/ssl/
-      - /home/app/nginx/html:/var/www/html
-      - /home/app/nginx/logs:/etc/nginx/logs
-    restart: no
+      #- nginxfiles:/ssl/
+      #- /home/app/nginx/html:/var/www/html
+      #- /home/app/nginx/logs:/etc/nginx/logs
+      - nginxfiles:/home/app/nginx
+    restart: always
     depends_on:
       - java_apptest
     networks:
