actualizacion de docker file y jenkinsfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,10 @@ services:
       - java_apptest
     networks:
       - apptestjava
+
+volumes:
+  nginxfiles:
+  
 networks:
   apptestjava:
     driver: bridge
