--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,8 @@ services:
       bash -c "
         cp -r /home/app/nginx/html/ /var/www/html &&
         cp -r /home/app/nginx/logs/ /etc/nginx/logs &&
-        cp -r /home/app/nginx/ssl/ /ssl/
+        cp -r /home/app/nginx/ssl/ /ssl/ && 
+        tail -f /dev/null
       "
     restart: always
     depends_on:
