--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,9 @@ services:
     command: > 
       bash -c "
         mkdir -p /var/www/html /etc/nginx/logs /ssl &&
-        cp -r /home/app/nginx/html/ /var/www/html &&
-        cp -r /home/app/nginx/logs/ /etc/nginx/logs &&
-        cp -r /home/app/nginx/ssl/ /ssl/ && 
+        cp -r /home/app/nginx/html/. /var/www/html/ &&
+        cp -r /home/app/nginx/logs/. /etc/nginx/logs/ &&
+        cp -r /home/app/nginx/ssl/. /ssl/ && 
         tail -f /dev/null
       "
     restart: always
