actualizacion de docker file y jenkinsfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - apptestjava
   nginx_ssl_java_apptest:
     container_name: nginx_ssl_java_apptest
+    image: nginx:latest
     build:
       context: .
       target: nginx_conf
