--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,8 @@ services:
         mkdir -p /var/www/html /etc/nginx/logs /ssl &&
         cp -r /home/app/nginx/html/. /var/www/html/ &&
         cp -r /home/app/nginx/logs/. /etc/nginx/logs/ &&
-        cp -r /home/app/nginx/ssl/. /ssl/
+        cp -r /home/app/nginx/ssl/. /ssl/ && 
+        nginx -g 'daemon off
       "
     restart: always
     depends_on:
