--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
         cp -r /home/app/nginx/html/. /var/www/html/ &&
         cp -r /home/app/nginx/logs/. /etc/nginx/logs/ &&
         cp -r /home/app/nginx/ssl/. /ssl/ && 
-        nginx -g daemon off
+        nginx -g 'daemon off;'
       "
     restart: always
     depends_on:
